--- a/requirements/specifications/spec_sys_002_004.yaml
+++ b/requirements/specifications/spec_sys_002_004.yaml
@@ -4,4 +4,4 @@ description: The requests.post() function allows the personalization of HTTP hea
 related_requirements:
 - REQ-SYS-002
 implementation_unit: src/requests/sessions.py
-unit_test: tests/test_requests.py
+unit_test: tests/test_requesto.py
